--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "my-rest-api",
   "version": "1.0.0",
   "engines": {
-    "node": "14.17.0",
-    "npm": "6.14.13"
+    "node": "12.0"
+    
   },
   "description": "",
   "main": "index.js",
