--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "my-rest-api",
   "version": "1.0.0",
   "engines": {
-    "node": "^14.17.0"
+    "node": "14.17.0"
   },
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node Main",
+    "start": "node ./Main.js",
     "dev": "nodemon ./main.js"
   },
   "keywords": [],
