--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "14.17.0"
   },
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./main.js",
