--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "serve build",
+    "start": "nodemon ./main.js",
     "dev": "nodemon ./main.js"
   },
   "keywords": [],
