--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "serve": "^12.0.0"
-  }
+  },
+  "heroku-run-build-script": true
 }
