--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js",
-    "dev": "node main.js"
+    "dev": "node main.js",
   },
   "keywords": [],
   "author": "",
@@ -27,6 +27,4 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "serve": "^12.0.0"
-  },
-  "heroku-run-build-script": true
-}
+  }
