--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js",
     "dev": "node main.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false   "
   },
   "keywords": [],
   "author": "",
