--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js",
-    "dev": "node main.js",
+    "dev": "node main.js"
   },
   "keywords": [],
   "author": "",
