--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "serve build",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "node main.js"
   },
   "keywords": [],
   "author": "",
