--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "node": "14.17.0"
   },
   "description": "",
-  "main": "index.html",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js",
+    "start": "npm run main",
     "dev": "node main.js"
   },
   "keywords": [],
