--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js",
-    "dev": "node main.js"
+    "dev": "node main.js",
+    "heroku-postbuild": "cd my-rest-api && npm install && npm run build"
+
   },
   "keywords": [],
   "author": "",
