--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js",
+    "start": "node main",
     "dev": "node main.js",
     "heroku-postbuild": " npm install && npm run build"
   },
