--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js",
-    "dev": "node main.js",
-    "heroku-postbuild": " npm install && npm run build"
+    "dev": "node main.js"
   },
   "keywords": [],
   "author": "",
