--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export NODE_ENV=production && npm run build && npm run start-server",
+    "start": "export NODE_ENV=production && node main.js",
     "dev": "node main.js"
   },
   "keywords": [],
