--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":  "node /app/main.js",
+    "start":  "node main.js",
     "dev": "node main.js"
   },
   "keywords": [],
