--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "npm" : "7.22.0"
   },
   "description": "",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":  "export NODE_ENV=production; node main.js",
-    "dev": "node main.js"
+    "start":  "node server.js",
+    "dev": "node server.js"
   },
   "keywords": [],
   "author": "",
