--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start" : "serve build"
   },
+  
+    "engines": {
+      "npm": "7.22.0"
+    },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
