--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "serve build"
+    "start" : "serve ./build"
   },
   
     "engines": {
